@@ -4,11 +4,12 @@ import ar.edu.unq.desapp.grupog.criptop2p.dto.OperationAmountResponseBody;
 import ar.edu.unq.desapp.grupog.criptop2p.dto.TransactionOrderResponseBody;
 import ar.edu.unq.desapp.grupog.criptop2p.dto.UserRequestBody;
 import ar.edu.unq.desapp.grupog.criptop2p.exception.EmailAlreadyTakenException;
+import ar.edu.unq.desapp.grupog.criptop2p.exception.InvalidConsultationDatesException;
 import ar.edu.unq.desapp.grupog.criptop2p.model.Role;
 import ar.edu.unq.desapp.grupog.criptop2p.model.TransactionOrder;
-import ar.edu.unq.desapp.grupog.criptop2p.model.TransactionStatus;
 import ar.edu.unq.desapp.grupog.criptop2p.model.User;
 import ar.edu.unq.desapp.grupog.criptop2p.persistence.RoleRepository;
+import ar.edu.unq.desapp.grupog.criptop2p.persistence.TransactionOrderRepository;
 import ar.edu.unq.desapp.grupog.criptop2p.persistence.UserRepository;
 import ar.edu.unq.desapp.grupog.criptop2p.service.resources.BCRAClient;
 import ar.edu.unq.desapp.grupog.criptop2p.service.resources.Mappers;
@@ -29,7 +30,6 @@ import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -38,6 +38,7 @@ import java.util.stream.Collectors;
 public class UserService implements UserDetailsService {
     private final UserRepository userRepository;
     private final RoleRepository roleRepository;
+    private final TransactionOrderRepository transactionOrderRepository;
     private final ModelMapper modelMapper;
     private final BCRAClient bcraClient;
     private final BCryptPasswordEncoder passwordEncoder;
@@ -72,23 +73,21 @@ public class UserService implements UserDetailsService {
 
     public List<TransactionOrderResponseBody> getAllTransactionOrders() {
         List<TransactionOrder> transactionOrders = getUserLoggedIn().getTransactionOrders();
-        List<TransactionOrderResponseBody> transactionOrderResponseBodies = new ArrayList<>();
 
-        transactionOrders.forEach(transactionOrder -> transactionOrderResponseBodies.add(Mappers.transactionOrderEntityToResponseBody(transactionOrder)));
-
-
-        return transactionOrderResponseBodies;
+        return transactionOrders
+                .stream()
+                .map(Mappers::transactionOrderEntityToResponseBody)
+                .toList();
     }
 
-    public OperationAmountResponseBody getOperationsAmountBetweenDates(LocalDateTime fromDate, LocalDateTime toDate) {
+    public OperationAmountResponseBody getOperationsAmountBetweenDates(LocalDateTime fromDate, LocalDateTime toDate) throws InvalidConsultationDatesException {
 
-        List<TransactionOrder> closedTransactions =
-                getUserLoggedIn()
-                        .getTransactionOrders()
-                        .stream()
-                        .filter(transactionOrder -> transactionOrder.getTransactionStatus() == TransactionStatus.CLOSED)
-                        .filter(transactionOrder -> transactionOrder.getCreationDate().isAfter(fromDate) && transactionOrder.getCreationDate().isBefore(toDate))
-                        .toList();
+        if (fromDate.isAfter(toDate)) {
+            throw new InvalidConsultationDatesException("The start date must be before the end date");
+        }
+
+        Long userId = getUserLoggedIn().getId();
+        List<TransactionOrder> closedTransactions = transactionOrderRepository.getUserClosedTransactionsBetweenDates(userId, fromDate, toDate);
 
         Double totalDollarAmount =
                 closedTransactions
@@ -101,7 +100,7 @@ public class UserService implements UserDetailsService {
         return Mappers.toOperationAmountResponseBody(
                 totalDollarAmount,
                 totalPesosAmount,
-                closedTransactions.stream().map(Mappers::transactionOrderEntityToResponseBody).collect(Collectors.toList()));
+                closedTransactions.stream().map(Mappers::transactionOrderEntityToResponseBody).toList());
     }
 
     private User userRequestBodyToEntityMapper(UserRequestBody requestBody) {
